src/test/ui/issues/issue-5067.stderr
error: repetition matches empty token tree
  --> $DIR/issue-5067.rs:4:8
   |
LL |     ( $()* ) => {};
   |        ^^

error: repetition matches empty token tree
  --> $DIR/issue-5067.rs:6:8
   |
LL |     ( $()+ ) => {};
   |        ^^

error: repetition matches empty token tree
  --> $DIR/issue-5067.rs:12:9
   |
LL |     ( [$()*] ) => {};
   |         ^^

error: repetition matches empty token tree
  --> $DIR/issue-5067.rs:14:9
   |
LL |     ( [$()+] ) => {};
   |         ^^

error: repetition matches empty token tree
  --> $DIR/issue-5067.rs:20:8
   |
LL |     ( $($()* $(),* $(a)* $(a),* )* ) => {};
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: repetition matches empty token tree
  --> $DIR/issue-5067.rs:22:8
   |
LL |     ( $($()* $(),* $(a)* $(a),* )+ ) => {};
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^

error: repetition matches empty token tree
  --> $DIR/issue-5067.rs:28:12
   |
LL |     ( $(a $()+)* ) => {};
   |            ^^

error: repetition matches empty token tree
  --> $DIR/issue-5067.rs:30:12
   |
LL |     ( $(a $()*)+ ) => {};
   |            ^^

error: repetition matches empty token tree
  --> $DIR/issue-5067.rs:38:18
   |
LL |     (a $e1:expr $($(, a $e2:expr)*)*) => ([$e1 $($(, $e2)*)*]);
   |                  ^^^^^^^^^^^^^^^^^^

error: repetition matches empty token tree
  --> $DIR/issue-5067.rs:50:8
   |
LL |     ( $()* ) => {}
   |        ^^

error: aborting due to 10 previous errors

